--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-hook-form": "^7.50.1",
     "joi": "^17.12.1",
     "@hookform/resolvers": "^3.3.4",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "@reduxjs/toolkit": "^2.2.1",
+    "react-redux": "^9.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
