--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.89",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "axios": "^1.6.7",
-    "react-hook-form": "^7.50.1",
-    "joi": "^17.12.1",
-    "@hookform/resolvers": "^3.3.4",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.3",
+    "react-hook-form": "^7.51.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "joi": "^17.12.2",
+    "@hookform/resolvers": "^3.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
